@@ -1,67 +1,68 @@
 <?php
 
 $BLOCKS = [
-    'ie_user_alert'                    => 1,
-    'news_on'                          => 1,
-    'ajaxchat_on'                      => 1,
-    'trivia_on'                        => 1,
-    'active_users_on'                  => 1,
-    'active_24h_users_on'              => 1,
-    'active_irc_users_on'              => 1,
-    'active_birthday_users_on'         => 1,
-    'stats_on'                         => 1,
-    'disclaimer_on'                    => 1,
-    'latest_user_on'                   => 1,
-    'latest_comments_on'               => 1,
-    'forum_posts_on'                   => 1,
-    'latest_torrents_on'               => 1,
-    'latest_torrents_scroll_on'        => 1,
-    'announcement_on'                  => 1,
-    'donation_progress_on'             => 1,
-    'ads_on'                           => 1,
-    'radio_on'                         => 1,
-    'torrentfreak_on'                  => 1,
-    'christmas_gift_on'                => 1,
-    'active_poll_on'                   => 1,
-    'movie_ofthe_week_on'              => 1,
-    'global_freeleech_on'              => 1,
-    'global_demotion_on'               => 1,
-    'global_message_on'                => 1,
-    'global_staff_warn_on'             => 1,
-    'global_staff_report_on'           => 1,
-    'global_staff_uploadapp_on'        => 1,
-    'global_happyhour_on'              => 1,
-    'global_crazyhour_on'              => 1,
-    'global_bug_message_on'            => 1,
-    'global_freeleech_contribution_on' => 1,
-    'userdetails_flush_on'             => 1,
-    'userdetails_joined_on'            => 1,
-    'userdetails_online_time_on'       => 1,
-    'userdetails_browser_on'           => 1,
-    'userdetails_reputation_on'        => 1,
-    'userdetails_profile_hits_on'      => 1,
-    'userdetails_birthday_on'          => 1,
-    'userdetails_contact_info_on'      => 1,
-    'userdetails_iphistory_on'         => 1,
-    'userdetails_traffic_on'           => 1,
-    'userdetails_share_ratio_on'       => 1,
-    'userdetails_seedtime_ratio_on'    => 1,
-    'userdetails_seedbonus_on'         => 1,
-    'userdetails_irc_stats_on'         => 1,
-    'userdetails_connectable_port_on'  => 1,
-    'userdetails_avatar_on'            => 1,
-    'userdetails_userclass_on'         => 1,
-    'userdetails_gender_on'            => 1,
-    'userdetails_freestuffs_on'        => 1,
-    'userdetails_comments_on'          => 1,
-    'userdetails_forumposts_on'        => 1,
-    'userdetails_invitedby_on'         => 1,
-    'userdetails_torrents_block_on'    => 1,
-    'userdetails_completed_on'         => 1,
-    'userdetails_snatched_staff_on'    => 1,
-    'userdetails_userinfo_on'          => 1,
-    'userdetails_showpm_on'            => 1,
-    'userdetails_report_user_on'       => 1,
-    'userdetails_user_status_on'       => 1,
-    'userdetails_user_comments_on'     => 1,
+	'ie_user_alert' => 1,
+	'news_on' => 1,
+	'ajaxchat_on' => 1,
+	'trivia_on' => 1,
+	'active_users_on' => 1,
+	'active_24h_users_on' => 1,
+	'active_irc_users_on' => 1,
+	'active_birthday_users_on' => 1,
+	'stats_on' => 1,
+	'disclaimer_on' => 1,
+	'latest_user_on' => 1,
+	'latest_comments_on' => 1,
+	'forum_posts_on' => 1,
+	'latest_torrents_on' => 1,
+	'latest_torrents_scroll_on' => 1,
+	'announcement_on' => 1,
+	'donation_progress_on' => 1,
+	'ads_on' => 1,
+	'radio_on' => 1,
+	'torrentfreak_on' => 1,
+	'christmas_gift_on' => 1,
+	'active_poll_on' => 1,
+	'movie_ofthe_week_on' => 1,
+	'global_freeleech_on' => 1,
+	'global_demotion_on' => 1,
+	'global_message_on' => 1,
+	'global_staff_warn_on' => 1,
+	'global_staff_report_on' => 1,
+	'global_staff_uploadapp_on' => 1,
+	'global_happyhour_on' => 1,
+	'global_crazyhour_on' => 1,
+	'global_bug_message_on' => 1,
+	'global_freeleech_contribution_on' => 1,
+	'userdetails_showfriends_on' => 1,
+	'userdetails_flush_on' => 1,
+	'userdetails_joined_on' => 1,
+	'userdetails_online_time_on' => 1,
+	'userdetails_browser_on' => 1,
+	'userdetails_reputation_on' => 1,
+	'userdetails_profile_hits_on' => 1,
+	'userdetails_birthday_on' => 1,
+	'userdetails_contact_info_on' => 1,
+	'userdetails_iphistory_on' => 1,
+	'userdetails_traffic_on' => 1,
+	'userdetails_share_ratio_on' => 1,
+	'userdetails_seedtime_ratio_on' => 1,
+	'userdetails_seedbonus_on' => 1,
+	'userdetails_irc_stats_on' => 1,
+	'userdetails_connectable_port_on' => 1,
+	'userdetails_avatar_on' => 1,
+	'userdetails_userclass_on' => 1,
+	'userdetails_gender_on' => 1,
+	'userdetails_freestuffs_on' => 1,
+	'userdetails_comments_on' => 1,
+	'userdetails_forumposts_on' => 1,
+	'userdetails_invitedby_on' => 1,
+	'userdetails_torrents_block_on' => 1,
+	'userdetails_completed_on' => 1,
+	'userdetails_snatched_staff_on' => 1,
+	'userdetails_userinfo_on' => 1,
+	'userdetails_showpm_on' => 1,
+	'userdetails_report_user_on' => 1,
+	'userdetails_user_status_on' => 1,
+	'userdetails_user_comments_on' => 1,
 ];
