@@ -80,6 +80,8 @@ $lang = [
     'block_login_link_set'           => 'Enable quick login link',
     'block_flush'                    => 'Flush Torrents?',
     'block_flush_set'                => 'Enable flush torrents',
+    'block_showfriends'              => 'Show Friends?',
+    'block_showfriends_set'          => 'Enable Show Friends',
     'block_joined'                   => 'Joined date?',
     'block_joined_set'               => 'Enable join date',
     'block_user_online_time'         => 'User online time?',
