@@ -80,6 +80,8 @@ $lang = [
     'block_login_link_set'           => 'Afi&#351;eaz&#259; link-ul de logare rapid.',
     'block_flush'                    => 'Cura&#355;a torentele fantom&#259;?',
     'block_flush_set'                => 'Afi&#351;eaz&#259; linkul de cura&#355;are a torentelor fantom&#259;.',
+    'block_showfriends'              => 'Show Friends?',
+    'block_showfriends_set'          => 'Enable Show Friends',
     'block_joined'                   => 'Data &#238;nregistr&#259;rii?',
     'block_joined_set'               => 'Afi&#351;eaz&#259; data &#238;nregistr&#259;rii pe pagina de detalii a utilizatorului',
     'block_user_online_time'         => 'Timpul online petrecut?',
