@@ -1,3 +1,7 @@
+19 Jan 2018
+add: option to disable/enable newsrss feeds
+add: missing admin 'Show Friends' block
+
 18 Jan 2018
 fix: edit wiki article
 fix: logout salt
